[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
inventory = "0.3.13"
itertools = "0.12.0"
md5 = "0.7.0"
num-integer = "0.1.45"
once_cell = "1.18.0"
owo-colors = "3.5.0"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = "1.10.2"
